--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,9 @@ body {
     font-size: 13.5px;
     padding: 10px 30px;
 }
+
+@media only screen and (max-width: 500px) {
+    .container {
+        margin: 50px 20px;
+    }
+}
